src/main/java/com/example/usersubscriptionservice/error/exception/UserNotFoundException.java
package com.example.usersubscriptionservice.error.exception;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
